# BlazeORM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  blaze.py  docker-compose.integration.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
Instructions/: README.md  architecture.md  coding_standards.md  constraints.md  current_state.md  glossary.md  known_gaps.md  plan.md  project_goal.md
examples/: README.md  __init__.py
examples/blog_app/: __init__.py  demo.py  models.py
examples/library_app/: __init__.py  demo.py  models.py
src/blazeorm/: README.md  __init__.py  version.py
src/blazeorm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/blazeorm/adapters/: README.md  __init__.py  base.py  mysql.py  postgres.py  sqlite.py
src/blazeorm/cache/: README.md  __init__.py  backends.py
src/blazeorm/core/: README.md  __init__.py  fields.py  model.py  relations.py
src/blazeorm/dialects/: README.md  __init__.py  base.py  mysql.py  postgres.py  sqlite.py
src/blazeorm/hooks/: README.md  (+2 more)
tests/adapters/: test_connection_config.py  test_mysql_adapter.py  test_postgres_adapter.py  test_sqlite_adapter.py
tests/cache/: test_cache.py  test_cache_thread_safety.py
tests/core/: test_model.py
tests/dialects/: test_mysql_dialect.py  test_postgres_dialect.py  test_sqlite.py
tests/examples/: test_blog_app.py  test_library_app.py
tests/hooks/: test_hooks.py
tests/integration/: test_mysql_integration.py  test_postgres_integration.py
tests/performance/: test_n_plus_one.py
tests/persistence/: test_many_to_many.py  test_session.py  test_session_get_placeholders.py  test_thread_safety.py
tests/query/: test_queryset.py  test_queryset_execution.py
tests/relations/: test_relationships.py
tests/schema/: test_migration_engine.py  test_schema_builder.py
tests/security/: test_security.py
tests/utils/: test_logging.py  test_performance_tracker.py
tests/validation/: test_validation.py
(+29 files in other folders)
