[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blazeorm"
dynamic = ["version"]
description = "A modular Python ORM with eager loading, migrations, caching, and multi-database adapters."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "BlazeORM Maintainers" }
]
license = { file = "LICENSE" }
keywords = ["orm", "database", "sqlite", "postgres", "mysql", "eager loading", "migrations"]
urls = { "Homepage" = "https://github.com/your-org/blazeorm", "Documentation" = "https://github.com/your-org/blazeorm" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Development Status :: 3 - Alpha",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
postgres = ["psycopg>=3.1"]
mysql = ["pymysql>=1.1", "mysqlclient>=2.2"]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.12.0",
  "ruff>=0.2.0",
  "isort>=5.12.0",
  "mypy>=1.8.0",
  "types-setuptools>=69.0.0.0",
]

[tool.setuptools.dynamic]
version = { attr = "blazeorm.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "psycopg",
  "pymysql",
  "MySQLdb",
]
ignore_missing_imports = true
